--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api/ns.js",
   "scripts": {
-    "start": "node app.js":
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
