--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "jsdom": "^16.2.1",
-    "xmlhttprequest": "^1.8.0"
-  },
-  "devDependencies": {
+    "xmlhttprequest": "^1.8.0",
     "marked": "^0.8.2"
   }
 }
