--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "jsdom": "^16.2.1",
-    "xmlhttprequest": "^1.8.0",
-    "marked": "^0.8.2"
+    "marked": "^0.8.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
